<resources>
    <string name="app_name">MUSIC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_a_title">This is a title</string>
    <string name="todo">TODO</string>
    <string name="artists">Artists</string>
    <string name="title">Title</string>
    <string name="_00_00">00:00</string>
    <string name="loading_title">Loading title…</string>
    <string name="loading_artist_s">Loading artist(s)…</string>
    <string name="add_new_comment">Add new comment…</string>
    <string name="post">Post</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="songs">Songs</string>
    <string name="message">Message</string>
    <string name="albums">Albums</string>
    <string name="genres">Genres</string>
    <string name="comments">Comments</string>
    <string name="accounts">Accounts</string>
    <string name="playlists">Playlists</string>
    <string name="countries">Countries</string>
    <string name="send_reset_email">send reset email</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="remember">Remember</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="sign_in_for_online">Sign in for online</string>
    <string name="go_to_your_collection">Go to your collection</string>
    <string name="continue_to_online">Continue to online</string>
    <string name="current_play_state_go">Mode: Go</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download">Download</string>
    <string name="play_pause">Play/Pause</string>
    <string name="now_playing">Now playing</string>
    <string name="count_song">Count song</string>
    <string name="count_length">Count length</string>
    <string name="all_songs">All songs</string>
    <string name="this_songs">This songs</string>
    <string name="length">Length</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome</string>
    <string name="my_web_client_id">269638464049-mt5th2vlt26et7c7ioch32k0duggicsh.apps.googleusercontent.com</string>
    <string name="internet_connection">Internet connection</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="collection">Collection</string>
    <string name="user">User</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="diary">Diary</string>
    <string name="datetime">Datetime</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="touch_outside"> * Touch outside this dialog or back button to cancel</string>
    <string name="cancel">Cancel</string>
    <string name="no_diaries">You don\'t have any diaries yet…</string>
    <string name="no_playlists">You don\'t have any playlists yet…</string>
    <string name="play">Play</string>
    <string name="play_game">Want to play a music game?</string>
    <string name="what_song">What is the name of the song playing?</string>
    <string name="play_again">Play again?</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="tracks_for_you">tracks for you</string>
    <string name="rename">Rename</string>
    <string name="recommend_for_you">recommend for you</string>
    <string name="see_more">More... </string>
    <string name="collapse">Collapse</string>
    <string name="your_own_playlist">Your own playlist</string>
    <string name="your_own_diary">Your own diary</string>
    <string name="one_must_know_oneself">One must know oneself</string>
    <string name="welcome_to_music">Welcome to MUSIC</string>
    <string name="i_do_not_seek_i_find">We do not seek. We find</string>
    <string name="recent">Recent &amp; for you</string>
    <string name="timer">Timer</string>
    <string name="set_time">Set time</string>
    <string name="set_this_track_as_ringtone">Set this track as ringtone</string>
    <string name="use_default">Use default theme color</string>
</resources>