<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/online_home_menu"
        android:title="@string/home"
        android:icon="@drawable/baseline_local_fire_department_24"/>

    <item
        android:id="@+id/online_search_menu"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item
        android:id="@+id/online_diary_menu"
        android:title="@string/diary"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"/>

    <item
        android:id="@+id/online_collection_menu"
        android:title="@string/collection"
        android:icon="@drawable/baseline_favorite_24"/>

    <item
        android:id="@+id/online_user_menu"
        android:title="@string/user"
        android:icon="@drawable/baseline_account_box_24"/>

</menu>