<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="wrap_content">

    <TextView
        android:padding="8dp"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:fontFamily="@font/orbitron"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/songArtist_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="8dp"
        android:layout_gravity="center"
        android:id="@+id/datetime_txt"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginHorizontal="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text="@string/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:textColor="@color/black"
        android:padding="8dp"
        android:background="@drawable/rounded_item_white"
        android:id="@+id/subject_txt"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_marginHorizontal="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:text="@string/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_item_white"
        android:gravity="start"
        android:id="@+id/content_txt"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autofillHints=""
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:background="@null"
            android:src="@drawable/baseline_remove_circle_outline_24"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cancel"
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:layout_marginHorizontal="16dp"
            android:background="@null"
            android:src="@drawable/baseline_bookmark_remove_24"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/delete"
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:background="@null"
            android:src="@drawable/baseline_add_task_24"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/save"
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/todo" />

    </LinearLayout>

</LinearLayout>