<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".online.ui.fragments.OnlinePlaylistFragment">

        <TextView
            android:textStyle="italic|bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/no_playlists"
            android:id="@+id/item_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_weight="10"
            android:id="@+id/online_playlist_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_button"
            android:layout_margin="8dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_baseline_add_24" />

    </LinearLayout>

</FrameLayout>