<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/item_color"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/datetime_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/title_txt"
            app:layout_constraintTop_toBottomOf="@+id/title_txt" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/delete_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton

            android:id="@+id/delete_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/item_color"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_delete_forever_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>