<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/option_dialog_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/author_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:singleLine="true"
            android:text="@string/artists"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_txt"
            app:layout_constraintTop_toBottomOf="@+id/title_txt" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/title_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/title"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/author_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_img"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:background="@color/main_color"
        app:cardCornerRadius="10dp"
        android:id="@+id/card_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/music_default"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/play_state_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_airline_stops_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/play_state_txt"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_play_state_go"
            android:layout_marginStart="30dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_to_playlist_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_playlist_add_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_playlist"
            android:layout_marginStart="30dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">


        <ImageView
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_comment_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:layout_marginStart="30dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/diary_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_featured_play_list_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary"
            android:layout_marginStart="30dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_file_download_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:layout_marginStart="30dp"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>