<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".online.ui.fragments.OnlineDiaryFragment">

        <TextView
            android:padding="10dp"
            android:fontFamily="@font/mkx"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/your_own_diary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.SearchView
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:queryHint="Search here..."
            app:submitBackground="@null"
            android:background="@drawable/shape_bg_search"
            app:iconifiedByDefault="false"
            android:queryHint="Search here..."
            android:id="@+id/searchView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:textStyle="italic|bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/no_diaries"
            android:id="@+id/item_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diary_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp" />

    </LinearLayout>

</FrameLayout>